# cnetflow

./: .dockerignore  .env  .env.sample  .gitignore  BUILD.md  CMakeLists.txt  DATABASE_BACKENDS.md  Dockerfile  Dockerfile.rhel7  Notes.md  README.md  build-rhel7-rpm.sh  build.ps1  build.sh  build_windows.sh  cmake_install.cmake  cnetflow.conf  cnetflow.service  conanfile.txt  docker-compose.yaml  drop_clickhouse_views.sh  local.conf  test_ch_schema.sh
.github/workflows/: centos7-rpm.yml  cmake-single-platform.yml  debian-package.yml
grafana/etc_dashboards/: flos_hourly.json  flows_hourly.json  traffic.json  traffic_v5.json  traffic_v9.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: datasource.yml
scripts/: build_centos6_binaries.sh  build_release_binaries.sh  convert_conexiones.py  gen_fields.h.py
scripts/sql/: functions.sql  tables.sql
scripts/sql/clickhouse/: 001-tables.sql  002-materialized-views.sql  003-example-queries.sql  README.md  setup.sh  truncate_all.sh
scripts/sql/psql/: 000-setup.sh  001-tables.sql  002-functions.sql  functions.sql  tables.sql
scripts/sql/supabase/: functions.sql
src/: arena.c  arena.h  cnetflow_snmp.c  cnetflow_snmp.h  collector.c  collector.h  compat.c  db.h  db_clickhouse.c  db_clickhouse.h  db_psql.c  db_psql.h  dyn_array.c  dyn_array.h  fields.h  fields.py.h  hashmap.c  hashmap.h  log.h  main.c  metrics.c  metrics.h  netflow.c  netflow.h  netflow_ipfix.c  netflow_ipfix.h  netflow_v5.c  netflow_v5.h  netflow_v9.c  netflow_v9.h  redis_handler.c  redis_handler.h  snmp.c  snmp.h
tests/: test_arena.c  test_ipfix.c  test_netflow.c  test_redis.c  tests.c  tests.h
timescale_pg_cron/: Dockerfile
web/: index.html
